# ros2_ws

./: .gitexclude  ENHANCED_SYSTEM_README.md  enable_manual_control.sh  run_all_nodes.sh  run_all_nodes_unified.sh  run_minimal.sh  run_rqt_graph.sh  shutdown_all_nodes.sh  system_validation.py  test_finger_extraction.py  test_manual_ui.sh  test_servos_direct.sh  test_shutdown.sh  validate_system.sh
Dashboards/hand_tracking_dashboard/: Hand_Tracking.py  README.md  README_pose_tracking.md  ui_components.py
documentation/: FINGER_POSITION_EXTRACTION_PLAN.md  README.md  SYSTEM_OVERVIEW.md  build_and_test_guide.md  complete_ros2_setup_analysis.md  control_system_lifecycle_conversion_plan.md  create_ros2_python_package.sh  hand_tracking_integration_plan.md  hand_tracking_integration_plan_final.md  lifecycle_nodes_implementation_plan.md  modular_ui_guide.md  project_summary.md  ros2_action_implementation_best_practices.md  ros2_lessons_learned_best_practices.md  ros2_python_package_setup_README.md  ros2_quick_reference_card.md  system_manager_action_implementation_plan.md  system_manager_implementation_plan.md
install/: local_setup.sh  setup.sh
install/camera_interface/lib/camera_interface/: camera_info_node  camera_lifecycle_node  camera_node
install/camera_interface/share/camera_interface/: package.dsv  package.ps1  package.sh  package.xml
install/control/lib/control/: motion_planner_node  pose_to_command_node  teleop_node  trajectory_executor_node
install/control/share/control/: package.dsv  package.ps1  package.sh  package.xml
install/control_system/lib/control_system/: perception_control_node  servo_interface_lifecycle_node
install/control_system/lib/cr3_interface/: servo_interface_node
log/: latest_build
src/action_interfaces/: CMakeLists.txt  package.xml
src/action_interfaces/action/: LifecycleManagement.action
src/action_server/: package.xml  setup.cfg  setup.py
src/action_server/action_server/: lifecycle_action_server.py
src/action_server/resource/: action_server
src/camera_interface/: camera_node.py  package.xml  setup.cfg  setup.py
src/camera_interface/camera_interface/: camera_node.py
src/control/: package.xml  pose_to_command_node.py  setup.cfg  setup.py  teleop_node.py
src/control/control/: motion_planner_node.py  pose_to_command_node.py  teleop_node.py  trajectory_executor_node.py
src/control_system/: package.xml  setup.cfg  setup.py
src/control_system/control_system/: lifecycle_manager.py
src/control_system/test/: test_lifecycle_nodes.py
src/cr3_interface/: cr3_controller_node.py  package.xml  setup.cfg  setup.py
src/cr3_interface/cr3_interface/: cr3_controller_node.py  hand_controller_node.py  ip_to_ros_bridge_node.py  tf_broadcaster_node.py
src/diagnostics/: network_monitor_node.py  setup.cfg  setup.py
src/diagnostics/diagnostics/: resource_monitor_node.py  watchdog_node.py
src/integration_tests/: setup.cfg  setup.py  test_suite_plan.md
src/integration_tests/integration_tests/: run_tests.py
src/integration_tests/test_config/: test_parameters.yaml
src/integration_tests/test_framework/: base_test_classes.py
src/launch/: all_node.launch.py  bringup.launch.py  control.launch.py  cr3_interface.launch.py  diagnostics.launch.py  minimal_bringup.launch.py  perception.launch.py  servo_control.launch.py  sim.launch.py  ui_dashboard.launch.py  visualization.launch.py
src/launch/params/: camera.yaml
src/perception/: body_pose_node.py  hand_pose_node.py  package.xml  setup.cfg  setup.py
src/perception/perception/: body_pose_node.py  coordinate_transform_node.py  hand_pose_node.py  pose_filter_node.py
src/servo_control/: package.xml  setup.cfg  setup.py
src/servo_control/servo_control/: direct_servo_tester_node.py  manual_servo_control_node.py
src/sim_interface/: package.xml  setup.cfg  setup.py  sim_world_interface_node.py
src/sim_interface/sim_interface/: simulator_node.py
src/ui/: mode_switcher_node.py  package.xml  setup.cfg  setup.py
src/ui/ui/: mode_switcher_node.py  ui_button_controller.py  ui_button_controller_new.py  ui_dashboard_lifecycle_node.py  ui_dashboard_node.py  ui_dashboard_node_fixed.py  ui_dashboard_node_modular.py
(+62 files in other folders)
